crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__device_list_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
List all connected devices

Usage: wheelctl device list [OPTIONS]

Options:
  -d, --detailed             Show detailed device information
      --json                 Output in JSON format for machine parsing
      --hid-observe-only     List only observe-only HID endpoints, without service/mock devices
  -v, --verbose...           Verbose logging
      --json-out <JSON_OUT>  Write the device list receipt to this JSON file
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
