crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__device_reset_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Reset device to safe state

Usage: wheelctl device reset [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>  Device ID or name

Options:
  -f, --force                Force reset without confirmation
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
