crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__device_status_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Show device status and telemetry

Usage: wheelctl device status [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>  Device ID or name

Options:
      --json                   Output in JSON format for machine parsing
      --moza-lane <MOZA_LANE>  Optional Moza lane artifact directory used to report descriptor trust
      --json-out <JSON_OUT>    Write the device status receipt to this JSON file
  -v, --verbose...             Verbose logging
      --no-mock                Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
  -w, --watch                  Watch status in real-time
      --endpoint <ENDPOINT>    Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                   Print help
