crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__diag_test_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Run system diagnostics

Usage: wheelctl diag test [OPTIONS] [TEST_TYPE]

Arguments:
  [TEST_TYPE]  Test type [possible values: motor, encoder, usb, thermal, all]

Options:
  -d, --device <DEVICE>      Device ID or name
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
