crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__game_configure_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Configure game for telemetry

Usage: wheelctl game configure [OPTIONS] <GAME>

Arguments:
  <GAME>  Game ID

Options:
      --json                 Output in JSON format for machine parsing
  -p, --path <PATH>          Game installation path
      --auto                 Enable auto-configuration
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
